--- a/style.css
+++ b/style.css
@@ -1,1 +1,74 @@
-/* Your CSS styles go here */
+body{
+	width: 55%;
+	/* padding: 20px; */
+	/* border: 2px solid blue; */
+	margin-left: 25%;
+	color: #EBEBEB;
+
+}
+
+#name {
+	margin-left: 40%;
+}
+
+#email{
+	margin-left: 35%;
+}
+
+a{
+	color: antiquewhite;
+}
+
+img{
+    width: 25%;
+	height: 25%;
+	margin-left: 35%;
+}
+
+#back{
+	background-image: url("background.jpg");
+	padding: 20px;
+}
+
+
+table.greyGridTable {
+	border: 2px solid #FFFFFF;
+	width: 100%;
+	text-align: center;
+	border-collapse: collapse;
+  }
+  table.greyGridTable td, table.greyGridTable th {
+	border: 1px solid #FFFFFF;
+	padding: 3px 4px;
+  }
+  table.greyGridTable tbody td {
+	font-size: 13px;
+  }
+  table.greyGridTable td:nth-child(even) {
+	/* background: #EBEBEB; */
+  }
+  table.greyGridTable thead {
+	background: #FFFFFF;
+	border-bottom: 4px solid #333333;
+  }
+  table.greyGridTable thead th {
+	font-size: 15px;
+	font-weight: bold;
+	color: #333333;
+	text-align: center;
+	border-left: 2px solid #333333;
+  }
+  table.greyGridTable thead th:first-child {
+	border-left: none;
+  }
+  
+  table.greyGridTable tfoot {
+	font-size: 14px;
+	font-weight: bold;
+	color: #333333;
+	border-top: 4px solid #333333;
+  }
+  table.greyGridTable tfoot td {
+	font-size: 14px;
+  }
+
