--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ img{
 	padding: 20px;
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px){
+  	#email2{
+  		font-size: 10%;
+  	}
+  }
 
 table.greyGridTable {
 	border: 2px solid #FFFFFF;
